objects/Feeding_Trial__c.object
<CustomObject>
    <fields>
        <fullName>Sum_Days_Between_Measurements__c</fullName>
        <description>Dairy - Sum of the Days Between Measurements for the calves in the Feeding Trial</description>
        <label>Sum Days Between Measurements</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Days_Between_Measurements__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_End_Height__c</fullName>
        <description>Dairy - Sum of the Ending Height for the Calves in the Feeding Trial</description>
        <label>Sum End Height (in)</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.End_Height_in__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_End_Weight__c</fullName>
        <description>Dairy - Sum of the Ending Weight for the Calves in the Feeding Trial</description>
        <label>Sum End Weight (lbs)</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.End_Weight_lbs__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Cattle - Total Yardage Cost + Total Feed Cost + Total Other Cost</description>
        <formula>Total_Feed_Cost__c +  Total_Yardage_Cost__c +  Total_Other_Cost__c</formula>
        <inlineHelpText>Total Yardage Cost + Total Feed Cost + Total Other Cost</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_hd__c</fullName>
        <description>Cattle - Total Cost/End # Head</description>
        <formula>Total_Cost__c /  End_Number_Hd__c</formula>
        <inlineHelpText>Total Cost/End # Head</inlineHelpText>
        <label>Total Cost $/hd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Gain__c</fullName>
        <description>Cattle - (Total Cost/Total Gain) x 100</description>
        <formula>(Total_Cost__c/ Total_Gain_lbs__c)*100</formula>
        <label>Total Cost of Gain ($/cwt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deer_on_Farm__c</fullName>
        <description>Deer - Number of Deer on Farm for Feeding Trial</description>
        <label>Total # Deer on Farm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Feed_Cost_Formula__c</fullName>
        <description>Cattle - Displays the total feed cost for the roll-up value. Used in formula fields to prevent the display of the #Error! in fields</description>
        <formula>IF(Total_Feed_Cost__c=0 , NULL, Total_Feed_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Feed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Feed_Cost__c</fullName>
        <description>Cattle - Sum of all Ingredients Cost if the Feeding Trial is not 90 Day Mineral Trial</description>
        <label>Total Feed Cost (Hidden)</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Total_Costs__c</summarizedField>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Feed_Cost_hd__c</fullName>
        <description>Cattle - if the Proof Type is Business Builder or Great Starts, take the total Feed Cost/End Hd.</description>
        <formula>Total_Feed_Cost__c /   End_Number_Hd__c</formula>
        <label>Total Feed Cost $/hd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gain_Acre__c</fullName>
        <description>Cattle - IF prooftype = 90 Day Mineral Trial, empty, Total Gain/Pasture Size</description>
        <formula>IF(ISPICKVAL(Proof_Type__c,&quot;90 Day Mineral Trial&quot;), NULL,  Total_Gain_lbs__c / Pasture_Size__c )</formula>
        <label>Total Gain/Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Gain_lbs__c</fullName>
        <description>Total gain from the feeding trial based on end and start weight</description>
        <formula>End_Total_Weight_lbs__c - Start_Total_Weight_lbs__c</formula>
        <label>Total Gain (lbs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_HD_Days__c</fullName>
        <description>Cattle - If Date Removed is empty, then the value should be (Start Head + End # Head Calc.)/2 x Days on Feed if it is not empty, it should be the sum of Number of Head Removed Calc</description>
        <formula>IF(Date_Removed_Calc1__c + 
Date_Removed_Calc2__c + 
Date_Removed_Calc3__c + 
Date_Removed_Calc4__c + 
Date_Removed_Calc5__c = NULL,
Number_Hd_Removed_Calc1__c + 
Number_Hd_Removed_Calc2__c + 
Number_Hd_Removed_Calc3__c + 
Number_Hd_Removed_Calc4__c + 
Number_Hd_Removed_Calc5__c + 
End_Number_Head_Calc__c,
(Start_No_Head__c  +  End_No_Head__c )/2 *  Days_on_Feed__c)</formula>
        <label>Total # HD Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lbs_Fed_Formula__c</fullName>
        <description>Cattle - Displays the Total Lbs Fed for the roll-up value. Used in formula fields to prevent the display of the #Error! in fields</description>
        <formula>IF(Total_Lbs_Fed__c=0, NULL, Total_Lbs_Fed__c)</formula>
        <label>Total Lbs Fed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lbs_Fed__c</fullName>
        <description>Cattle - Total Lbs Fed based on the Lbs Fed on the Feeding Trial Track Sheet</description>
        <label>Total Lbs Fed (Hidden)</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Lbs_Fed__c</summarizedField>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Cost__c</fullName>
        <description>Cattle - Total sum of all &quot;Other Costs&quot; not included above.</description>
        <inlineHelpText>Total sum of all &quot;Other Costs&quot; not included above.</inlineHelpText>
        <label>Total Other Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Yardage_Cost__c</fullName>
        <description>Cattle - HD Days x $/Day</description>
        <formula>Yardage_HD_Days__c *  Yardage_Cost_Day__c</formula>
        <label>Total Yardage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trial_Type__c</fullName>
        <description>Trial Type for Deer</description>
        <label>Trial Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Deer Farm</fullName>
                </value>
                <value>
                    <fullName>Large Deer Farm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Feeding_Trial_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Feeding Trial ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardage_Cost_Day__c</fullName>
        <description>Cattle - Yardage $/Day</description>
        <label>Yardage $/Day</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yardage_HD_Days__c</fullName>
        <description>Cattle - Total # HD Days</description>
        <formula>Total_HD_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardage (HD Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feeding Trial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Specie__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cattle_Feeding_Trials</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Area_Sales_Manager__c</columns>
        <columns>Feeding_Trial_Status__c</columns>
        <columns>Proof_Type__c</columns>
        <columns>Product_Proof__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Sex__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Cattle_90D_Mineral_Trial,Feeding_Trial__c.Cattle_Business_Builder</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Cattle_Great_Starts,Feeding_Trial__c.Cattle_Proof_Form</value>
        </filters>
        <label>Cattle Feeding Trials</label>
    </listViews>
    <listViews>
        <fullName>Dairy_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Calves_F__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Dairy</value>
        </filters>
        <label>Dairy Feeding Trials</label>
    </listViews>
    <listViews>
        <fullName>Deer_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Total_Deer_on_Farm__c</columns>
        <columns>Number_of_Deer_on_Trial__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Deer</value>
        </filters>
        <label>Deer Feeding Trials</label>
        <sharedTo>
            <group>Feeding_Trials_Deer</group>
            <group>Feeding_Trials_Deer_Admin</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Horse_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Horses__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Horse</value>
        </filters>
        <label>Horse Feeding Trials</label>
    </listViews>
    <listViews>
        <fullName>My_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Specie__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Feeding_Trial__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Feeding Trials</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Specie__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Team_s_Feeding_Trials__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Team&apos;s Feeding Trials</label>
        <sharedTo>
            <group>Area_Sales_Managers</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Show_All_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Animals_per_Pen__c</columns>
        <columns>Specie__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Show_Goat,Feeding_Trial__c.Show_Cattle,Feeding_Trial__c.Show_Swine,Feeding_Trial__c.Show_Lamb</value>
        </filters>
        <label>Show - All Feeding Trials</label>
        <sharedTo>
            <group>Feeding_Trials_Show_Cattle</group>
            <group>Feeding_Trials_Show_Cattle_Admin</group>
            <group>Feeding_Trials_Show_Goat</group>
            <group>Feeding_Trials_Show_Goat_Admin</group>
            <group>Feeding_Trials_Show_Lamb</group>
            <group>Feeding_Trials_Show_Lamb_Admin</group>
            <group>Feeding_Trials_Show_Swine</group>
            <group>Feeding_Trials_Show_Swine_Admin</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Show_Cattle_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Animals_per_Pen__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Show_Cattle</value>
        </filters>
        <label>Show - Cattle Feeding Trials</label>
        <sharedTo>
            <group>Feeding_Trials_Show_Cattle</group>
            <group>Feeding_Trials_Show_Cattle_Admin</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Show_Goat_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Animals_per_Pen__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Show_Goat</value>
        </filters>
        <label>Show - Goat Feeding Trials</label>
        <sharedTo>
            <group>Feeding_Trials_Show_Goat</group>
            <group>Feeding_Trials_Show_Goat_Admin</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Show_Lamb_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Animals_per_Pen__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Show_Lamb</value>
        </filters>
        <label>Show - Lamb Feeding Trials</label>
        <sharedTo>
            <group>Feeding_Trials_Show_Lamb</group>
            <group>Feeding_Trials_Show_Lamb_Admin</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Show_Swine_Feeding_Trials</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purina_Dealer__c</columns>
        <columns>Lead_Purina_Sales_Person__c</columns>
        <columns>Number_of_Animals_per_Pen__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Specie__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feeding_Trial__c.Show_Swine</value>
        </filters>
        <label>Show - Swine Feeding Trials</label>
        <sharedTo>
            <group>Feeding_Trials_Show_Swine</group>
            <group>Feeding_Trials_Show_Swine_Admin</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Feeding Trial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feeding Trials</pluralLabel>
    <recordTypes>
        <fullName>Cattle_90D_Mineral_Trial</fullName>
        <active>true</active>
        <description>If you are seeking payment from a 90 D Mineral Trial</description>
        <label>Cattle - 90 D Mineral Trial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cattle_Business_Builder</fullName>
        <active>true</active>
        <description>If you are seeking payment from Business Builder</description>
        <label>Cattle - Business Builder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cattle_Great_Starts</fullName>
        <active>true</active>
        <description>If you are seeking payment from Great Starts</description>
        <label>Cattle - Great Starts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cattle_Proof_Form</fullName>
        <active>true</active>
        <description>If you are just submitting data to the database.</description>
        <label>Cattle - Proof Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dairy</fullName>
        <active>true</active>
        <description>Dairy Feeding Trial</description>
        <label>Dairy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deer</fullName>
        <active>true</active>
        <description>Deer Feeding Trial</description>
        <label>Deer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Horse</fullName>
        <active>true</active>
        <description>Horse Feeding Trial</description>
        <label>Horse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Cattle</fullName>
        <active>true</active>
        <description>Show - Cattle Feeding Trial</description>
        <label>Show - Cattle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Goat</fullName>
        <active>true</active>
        <description>Show - Goat Feeding Trial</description>
        <label>Show - Goat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Lamb</fullName>
        <active>true</active>
        <description>Show - Lamb Feeding Trial</description>
        <label>Show - Lamb</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Swine</fullName>
        <active>true</active>
        <description>Show - Swine Feeding Trial</description>
        <label>Show - Swine</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>All_End_Date_Before_Start_Date</fullName>
        <active>true</active>
        <description>The End Date of the Feeding Trial cannot be before the Start Date</description>
        <errorConditionFormula>OR(
CONTAINS(RecordType.Name, &apos;Cattle&apos;),
RecordType.Name=&apos;Dairy&apos;,
RecordType.Name=&apos;Horse&apos;,
RecordType.Name=&apos;Show - Cattle&apos;,
RecordType.Name=&apos;Show - Deer&apos;,
RecordType.Name=&apos;Show - Goat&apos;,
RecordType.Name=&apos;Show - Lamb&apos;,
RecordType.Name=&apos;Show - Swine&apos;)
&amp;&amp;
End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date cannot be before the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_50_Number_Of_Head</fullName>
        <active>true</active>
        <description>Number of Head required to Qualify for Business Builder or Great Starts Proof Pays</description>
        <errorConditionFormula>OR(
RecordType.Name  = &apos;Cattle - Business Builder&apos;,
RecordType.Name = &apos;Cattle - Great Starts&apos;,
RecordType.Name = &apos;Cattle - Proof Form&apos;)
&amp;&amp;
Start_No_Head__c &lt;= 49
&amp;&amp;
OR(
ISPICKVAL(Program_Type__c, &apos;Calves – Creep&apos;),
ISPICKVAL(Program_Type__c, &apos;Creep &amp; Weaning&apos;),
ISPICKVAL(Program_Type__c, &apos;Creep/Wean/Background&apos;),
ISPICKVAL(Program_Type__c, &apos;Creep/Wean/Backgrd/Finish&apos;),
ISPICKVAL(Program_Type__c, &apos;Weaning/Background&apos;),
ISPICKVAL(Program_Type__c, &apos;Wean/Backgrd/Finish&apos;),
ISPICKVAL(Program_Type__c, &apos;Background - Steers&apos;),
ISPICKVAL(Program_Type__c, &apos;Background - Heifers&apos;),
ISPICKVAL(Program_Type__c, &apos;Background - Mixed&apos;),
ISPICKVAL(Program_Type__c, &apos;Background &amp; Finish&apos;),
ISPICKVAL(Program_Type__c, &apos;Finishing - Steers&apos;),
ISPICKVAL(Program_Type__c, &apos;Finishing - Heifers&apos;),
ISPICKVAL(Program_Type__c, &apos;Finishing - Mixed&apos;),
ISPICKVAL(Program_Type__c, &apos;Brood Cows&apos;),
ISPICKVAL(Program_Type__c, &apos;Cows - Fattening&apos;))</errorConditionFormula>
        <errorDisplayField>Start_No_Head__c</errorDisplayField>
        <errorMessage>Minimum Number of Head for Feeding Trial is 50</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Brood_Cow_End_Avg_BCS</fullName>
        <active>false</active>
        <description>Enter Ending Avg. BCS if the Program Type is &quot;Brood Cows&quot;</description>
        <errorConditionFormula>OR(RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;,
RecordType.Name = &apos;Cattle - Business Builder&apos;,
RecordType.Name = &apos;Cattle - Great Starts&apos;,
RecordType.Name = &apos;Cattle - Proof Form&apos;
)
&amp;&amp;
ISPICKVAL(Program_Type__c , &apos;Brood Cows&apos;)
&amp;&amp;
ISNULL(End_Avg_BCS__c)</errorConditionFormula>
        <errorDisplayField>End_Avg_BCS__c</errorDisplayField>
        <errorMessage>Must provide the End Avg. BCS if the Program Type is &quot;Brood Cows&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Brood_Cow_Start_Avg_BCS</fullName>
        <active>false</active>
        <description>Enter Starting Avg. BCS if the Program Type is &quot;Brood Cows&quot;</description>
        <errorConditionFormula>OR(RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;,
RecordType.Name = &apos;Cattle - Business Builder&apos;,
RecordType.Name = &apos;Cattle - Great Starts&apos;,
RecordType.Name = &apos;Cattle - Proof Form&apos;
)
&amp;&amp;
ISPICKVAL(Program_Type__c , &apos;Brood Cows&apos;)
&amp;&amp;
ISNULL(Start_Avg_BCS__c)</errorConditionFormula>
        <errorDisplayField>Start_Avg_BCS__c</errorDisplayField>
        <errorMessage>Must provide the Start Avg. BCS if the Program Type is &quot;Brood Cows&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Corn_Cost</fullName>
        <active>true</active>
        <description>Cattle - Corn Cost ($/bu) cannot be negative</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Corn_Cost_bu__c    &lt; 0</errorConditionFormula>
        <errorDisplayField>Corn_Cost_bu__c</errorDisplayField>
        <errorMessage>Invalid number for Corn Cost ($/bu)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_End_Avg_BCS</fullName>
        <active>true</active>
        <description>Cattle - 90 D Feeding Trial - End Avg. BCS cannot be a negative value</description>
        <errorConditionFormula>OR(
RecordType.Name = &apos;Cattle - Business Builder&apos;,
RecordType.Name = &apos;Cattle - Great Starts&apos;,
RecordType.Name = &apos;Cattle - Proof Form&apos;,
RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;)
&amp;&amp;
End_Avg_BCS__c    &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_Avg_BCS__c</errorDisplayField>
        <errorMessage>Invalid number for End Avg. BCS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_End_Number_Of_Head</fullName>
        <active>true</active>
        <description>Number of Head required to Qualify for Business Builder or Great Starts Proof Pays</description>
        <errorConditionFormula>OR(
RecordType.Name = &apos;Cattle - Business Builder&apos;,
RecordType.Name = &apos;Cattle - Great Starts&apos;,
RecordType.Name = &apos;Cattle - Proof Form&apos;,
RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;)
&amp;&amp;
End_No_Head__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_No_Head__c</errorDisplayField>
        <errorMessage>Invalid number of animals for Cattle Feeding Trial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_End_Total_Weight</fullName>
        <active>true</active>
        <description>Cattle - Ending Total Weight cannot be a negative value or 0</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
End_Total_Weight_lbs__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_Total_Weight_lbs__c</errorDisplayField>
        <errorMessage>Invalid number for End Total Weight (lbs)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_End_and_Start_No_Head</fullName>
        <active>true</active>
        <description>Prevents End No. Head from being greater than Start No. Head</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;, 
RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;) 
&amp;&amp; 
Start_No_Head__c &lt; End_No_Head__c</errorConditionFormula>
        <errorDisplayField>End_No_Head__c</errorDisplayField>
        <errorMessage>End No. Head cannot be greater than Start No. Head</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Est_Ending_Weight</fullName>
        <active>true</active>
        <description>Cattle - 90 D Feeding Trial - Est. Ending Weight cannot be a negative value</description>
        <errorConditionFormula>RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;
&amp;&amp;
Est_Ending_Weight__c   &lt;= 0</errorConditionFormula>
        <errorDisplayField>Est_Ending_Weight__c</errorDisplayField>
        <errorMessage>Invalid number for Est. Ending Weight</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Est_Starting_Weight</fullName>
        <active>true</active>
        <description>Cattle - 90 D Feeding Trial - Est. Starting Weight cannot be a negative value</description>
        <errorConditionFormula>RecordType.Name = &apos;Cattle - 90 D Mineral Trial&apos;
&amp;&amp;
Est_Starting_Weight__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Est_Starting_Weight__c</errorDisplayField>
        <errorMessage>Invalid number for Est. Starting Weight</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Grain_MIx_Consumed</fullName>
        <active>true</active>
        <description>Cattle - Grain Mix Consumed cannot be a negative value</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Grain_Mix_Consumed__c   &lt; 0</errorConditionFormula>
        <errorDisplayField>Grain_Mix_Consumed__c</errorDisplayField>
        <errorMessage>Invalid number for Grain Mix Consumed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Great_Start_Trial_Length</fullName>
        <active>true</active>
        <description>The Cattle - Great Starts must be at least 17</description>
        <errorConditionFormula>RecordType.Name = &quot;Cattle - Great Starts&quot; &amp;&amp;
Days_on_Feed__c &lt;= 16</errorConditionFormula>
        <errorMessage>Does not meet Minimum # of Days for Great Starts Trial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Hd_Died_due_to_Bloat</fullName>
        <active>true</active>
        <description>Prevents # Hd Died due to: Bloat from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Hd_Died_due_to_Bloat__c  &lt;0</errorConditionFormula>
        <errorDisplayField>Hd_Died_due_to_Bloat__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Hd_Died_due_to_Digestive</fullName>
        <active>true</active>
        <description>Prevents # Hd Died due to: Digestive from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Hd_Died_due_to_Digestive__c  &lt;0</errorConditionFormula>
        <errorDisplayField>Hd_Died_due_to_Digestive__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Hd_Died_due_to_Foot_Rot</fullName>
        <active>true</active>
        <description>Prevents # Hd Died due to: Foot Rot from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Hd_Died_due_to_Foot_Rot__c   &lt;0</errorConditionFormula>
        <errorDisplayField>Hd_Died_due_to_Foot_Rot__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Hd_Died_due_to_Injury</fullName>
        <active>true</active>
        <description>Prevents # Hd Died due to: Injury from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Hd_Died_due_to_Injury__c   &lt;0</errorConditionFormula>
        <errorDisplayField>Hd_Died_due_to_Injury__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Hd_Died_due_to_Other</fullName>
        <active>true</active>
        <description>Prevents # Hd Died due to: Other from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Cattle - Business Builder&apos;, 
RecordType.Name = &apos;Cattle - Great Starts&apos;, 
RecordType.Name = &apos;Cattle - Proof Form&apos;) 
&amp;&amp;
Hd_Died_due_to_Other__c   &lt;0</errorConditionFormula>
        <errorDisplayField>Hd_Died_due_to_Other__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
</CustomObject>